fix: add swagger validation (#8)
